# finance-database

./: .gitignore  companies-held.csv  graph_market_indices_interactively.ipynb  interface.ipynb  main.py  output-current-price.csv  pyproject.toml  readme.md  requirements.txt  sqlite_wrapper.py
finance_database/: excel_wrapper.py  finance_database.py  sqlite_wrapper.py  uuid7_draft.py
