[tool.poetry]
name = "finance-database"
version = "0.1.0"
description = ""
authors = ["Andre <pretorius.dre+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
yfinance = "^0.2.43"
SQLAlchemy = "^2.0.34"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
